added media queries for homepage about and blog section

--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -4,6 +4,56 @@ $breakpointMedium: 1000px;
 $breakpointSmall: 768px;
 $breakpointExtraSmall: 520px;
 
+@media (max-width: 1300px) {
+  // Home > Blog
+  .blog {
+    .row {
+      flex-direction: column;
+    }
+
+    .imgContainer {
+      width: 70%;
+    }
+
+    .textContainer {
+      margin-top: 80px;
+      width: 90%;
+    }
+
+    .rowOne {
+      .textContainer {
+        align-items: flex-end;
+        text-align: right;
+      }
+    }
+
+    .rowTwo {
+      flex-direction: column-reverse;
+
+      .imgContainer {
+        align-self: flex-end;
+      }
+
+      .textContainer {
+        text-align: left;
+        margin-top: 200px;
+      }
+
+      h3 {
+        text-align: left;
+      }
+
+      .btnContainer {
+        text-align: left;
+      }
+    }
+
+    .inner {
+      max-width: 100%;
+    }
+  }
+}
+
 @media (max-width: $breakpointLarge) {
   //Home Header
   .homeHeader {
@@ -11,6 +61,13 @@ $breakpointExtraSmall: 520px;
       bottom: -150px;
       min-width: 600px;
       width: 50%;
+    }
+  }
+
+  //Home > About Section
+  .about {
+    .wrapper {
+      margin-top: 0;
     }
   }
 }
@@ -27,9 +84,24 @@ $breakpointExtraSmall: 520px;
       min-width: 480px;
     }
   }
+
+  //Home > Blog
+  .blog {
+    .imgContainer {
+      width: 90%;
+    }
+  }
 }
 
 @media (max-width: $breakpointSmall) {
+  //Base Styles
+  h2 {
+    font-size: 1.8rem;
+  }
+
+  h3 {
+    font-size: 1.4;
+  }
   //Home Header
   .homeHeader {
     .wrapper {
@@ -55,6 +127,13 @@ $breakpointExtraSmall: 520px;
   label {
     display: block;
   }
+
+  //Home > About
+  .about {
+    p {
+      text-align: center;
+    }
+  }
 }
 
 @media (max-width: $breakpointExtraSmall) {
@@ -74,5 +153,27 @@ $breakpointExtraSmall: 520px;
 
   .mobileNav {
     max-width: 80%;
+  }
+
+  //Home > About
+  .about {
+    padding-top: 150px;
+  }
+
+  //Home > Blog
+  .blog {
+    .row {
+      .textContainer {
+        text-align: center;
+      }
+
+      h3 {
+        text-align: center;
+      }
+
+      .btnContainer {
+        text-align: center;
+      }
+    }
   }
 }
