--- a/styles/sass/partials/pages/_home.scss
+++ b/styles/sass/partials/pages/_home.scss
@@ -26,6 +26,7 @@
     max-width: none;
     width: 100%;
   }
+
   .row {
     display: flex;
     justify-content: space-between;
@@ -145,6 +146,7 @@
 
   .textContainer {
     width: 66%;
+    margin-left: 80px;
   }
 
   p {
