--- a/styles/style.css
+++ b/styles/style.css
@@ -767,6 +767,7 @@ i {
 }
 .profile .textContainer {
   width: 66%;
+  margin-left: 80px;
 }
 .profile p {
   margin-bottom: 50px;
@@ -991,6 +992,9 @@ i {
     -webkit-box-direction: reverse;
         -ms-flex-direction: column-reverse;
             flex-direction: column-reverse;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
   }
   .blog .rowTwo .imgContainer {
     -ms-flex-item-align: end;
@@ -1000,10 +1004,8 @@ i {
     text-align: left;
     margin-top: 200px;
   }
-  .blog .rowTwo h3 {
-    text-align: left;
-  }
-  .blog .rowTwo .btnContainer {
+  .blog .rowTwo h3,
+.blog .rowTwo .btnContainer {
     text-align: left;
   }
   .blog .inner {
@@ -1034,6 +1036,36 @@ i {
 
   .blog .imgContainer {
     width: 90%;
+  }
+  .blog .rowOne .textContainer,
+.blog .rowTwo .textContainer {
+    text-align: center;
+  }
+  .blog .rowOne .textContainer h3,
+.blog .rowOne .textContainer .btnContainer,
+.blog .rowTwo .textContainer h3,
+.blog .rowTwo .textContainer .btnContainer {
+    text-align: center;
+  }
+
+  .info {
+    padding: 50px 0;
+  }
+  .info .infoContainer {
+    width: 100%;
+  }
+  .info .infoContainer:first-child {
+    margin-top: 0;
+  }
+
+  .profile .imgContainer {
+    min-width: 40%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
 }
 @media (max-width: 768px) {
