--- a/styles/sass/partials/pages/_home.scss
+++ b/styles/sass/partials/pages/_home.scss
@@ -166,6 +166,12 @@
 
   .imgContainer {
     width: calc((100% / 3) - 30px);
+    cursor: pointer;
+    transition: transform 0.25s;
+
+    &:hover {
+      transform: scale(1.1);
+    }
   }
 }
 
