--- a/styles/sass/partials/_form.scss
+++ b/styles/sass/partials/_form.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   padding: 50px;
-  background-color: $white;
+  background-color: transparent;
 
   fieldset {
     padding: 0;
@@ -16,7 +16,6 @@
   input {
     width: 50%;
     border: none;
-    background-color: $white;
     border-bottom: 2px solid $secondary;
     font-family: $bodyFont;
     color: $black;
@@ -38,10 +37,10 @@
     border: 2px solid $secondary;
     padding: 20px;
     color: $black;
-    background-color: $white;
     font-family: $bodyFont;
     margin-bottom: 50px;
     transition: border 0.3s;
+    height: 150px;
 
     &::placeholder {
       color: $black;
