--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -67,6 +67,12 @@ $breakpointExtraSmall: 520px;
       margin-top: 0;
     }
   }
+
+  //Blog > Header
+  .blogHeader h1 {
+    width: 60%;
+    margin-bottom: 50px;
+  }
 }
 
 @media (max-width: $breakpointMedium) {
@@ -120,6 +126,36 @@ $breakpointExtraSmall: 520px;
       align-items: center;
     }
   }
+
+  //Blog > Main
+  .blogMain {
+    flex-direction: column;
+
+    .posts {
+      width: 99%;
+      max-width: none;
+      align-self: flex-end;
+    }
+
+    .form {
+      padding: 0;
+    }
+  }
+
+  .sidebar {
+    max-width: 90%;
+    align-items: center;
+    align-self: center;
+    margin-top: 100px;
+
+    .imgContainer {
+      max-width: 70%;
+    }
+
+    .sidebarContainer {
+      width: 70%;
+    }
+  }
 }
 
 @media (max-width: $breakpointSmall) {
@@ -130,6 +166,16 @@ $breakpointExtraSmall: 520px;
 
   h3 {
     font-size: 1.4;
+  }
+
+  .form {
+    fieldset {
+      flex-wrap: wrap;
+    }
+
+    input {
+      width: 100%;
+    }
   }
   //Home Header
   .homeHeader {
@@ -196,6 +242,16 @@ $breakpointExtraSmall: 520px;
       width: auto;
     }
   }
+
+  //Blog> Header
+  .blogHeader h1 {
+    margin-bottom: 100px;
+    font-size: 3rem;
+  }
+
+  .postContainer {
+    text-align: center;
+  }
 }
 
 @media (max-width: $breakpointExtraSmall) {
@@ -258,5 +314,15 @@ $breakpointExtraSmall: 520px;
         margin-bottom: 30px;
       }
     }
+  }
+
+  //Blog > Sidebar
+  .sidebar .imgContainer {
+    max-width: none;
+  }
+
+  .sidebar .sidebarContainer {
+    width: 100%;
+    max-width: none;
   }
 }
