--- a/styles/sass/partials/_baseStyles.scss
+++ b/styles/sass/partials/_baseStyles.scss
@@ -3,6 +3,15 @@ img {
   display: block;
 }
 
+.skip-link {
+  position: absolute;
+  left: -1000px;
+  top: 5px;
+  background-color: #fff;
+  color: #000;
+  z-index: 10;
+}
+
 .wrapper {
   max-width: 1280px;
   width: 90%;
