--- a/styles/sass/partials/_form.scss
+++ b/styles/sass/partials/_form.scss
@@ -19,6 +19,7 @@
     border-bottom: 2px solid $secondary;
     font-family: $bodyFont;
     color: $black;
+    background-color: transparent;
     padding: 20px;
     transition: border 0.3s;
 
@@ -40,7 +41,8 @@
     font-family: $bodyFont;
     margin-bottom: 50px;
     transition: border 0.3s;
-    height: 150px;
+    height: 250px;
+    background-color: transparent;
 
     &::placeholder {
       color: $black;
