--- a/styles/style.css
+++ b/styles/style.css
@@ -322,6 +322,15 @@ img {
   display: block;
 }
 
+.skip-link {
+  position: absolute;
+  left: -1000px;
+  top: 5px;
+  background-color: #fff;
+  color: #000;
+  z-index: 10;
+}
+
 .wrapper {
   max-width: 1280px;
   width: 90%;
@@ -554,6 +563,7 @@ i {
   border-bottom: 2px solid #4ceea7;
   font-family: "Roboto", sans-serif;
   color: #2c2c2c;
+  background-color: transparent;
   padding: 20px;
   -webkit-transition: border 0.3s;
   transition: border 0.3s;
@@ -585,7 +595,8 @@ i {
   margin-bottom: 50px;
   -webkit-transition: border 0.3s;
   transition: border 0.3s;
-  height: 150px;
+  height: 250px;
+  background-color: transparent;
 }
 .form textarea::-webkit-input-placeholder {
   color: #2c2c2c;
@@ -947,6 +958,7 @@ i {
   margin-top: -425px;
 }
 .contactForm .form {
+  background-color: #fafafa;
   padding-top: 100px;
   -webkit-box-shadow: -45px 45px 0px -5px #fdfa69;
           box-shadow: -45px 45px 0px -5px #fdfa69;
@@ -965,6 +977,9 @@ i {
 }
 .contactInfo ul li:not(last-child) {
   margin-right: 20px;
+}
+.contactInfo i {
+  font-size: 1.5rem;
 }
 .contactInfo h4 {
   font-size: 26px;
@@ -1034,6 +1049,10 @@ i {
   .blogHeader h1 {
     width: 60%;
     margin-bottom: 50px;
+  }
+
+  .contactHeader h1 {
+    font-size: 3.5rem;
   }
 }
 @media (max-width: 1000px) {
@@ -1112,6 +1131,41 @@ i {
   .sidebar .sidebarContainer {
     width: 70%;
   }
+
+  .contactHeader h1 {
+    margin-left: 0;
+  }
+
+  .contactMain .wrapper {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-bottom: 100px;
+  }
+  .contactMain .wrapper .contactForm {
+    width: 100%;
+    -webkit-box-shadow: none;
+            box-shadow: none;
+    margin-bottom: 150px;
+  }
+  .contactMain .wrapper .contactForm .form {
+    -webkit-box-shadow: 0px 15px 0px 5px #fdfa69;
+            box-shadow: 0px 15px 0px 5px #fdfa69;
+  }
+
+  .contactInfo {
+    margin: 0;
+    text-align: center;
+  }
+  .contactInfo ul {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 @media (max-width: 768px) {
   h2 {
@@ -1122,6 +1176,9 @@ i {
     font-size: 1.4;
   }
 
+  .form {
+    padding: 30px;
+  }
   .form fieldset {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
@@ -1200,6 +1257,21 @@ i {
   .postContainer {
     text-align: center;
   }
+
+  .contactHeader .headingContainer {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+
+  .contactHeader h1 {
+    font-size: 2.5rem;
+    margin-top: 100px;
+  }
+
+  .contactForm .form {
+    padding-top: 80px;
+  }
 }
 @media (max-width: 520px) {
   .homeHeader {
@@ -1265,5 +1337,13 @@ i {
   .sidebar .sidebarContainer {
     width: 100%;
     max-width: none;
+  }
+
+  .contactHeader h1 {
+    font-size: 2rem;
+  }
+
+  .contactForm .form {
+    padding-top: 50px;
   }
 }
