added hover effects to buttons

--- a/styles/sass/partials/_baseStyles.scss
+++ b/styles/sass/partials/_baseStyles.scss
@@ -23,4 +23,13 @@ img {
   font-family: $headingFont;
   padding: 10px 15px;
   text-transform: uppercase;
+  transition: 0.25s;
+
+  &:hover {
+    background-color: $black;
+    color: $white;
+    padding: 10px 20px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+      rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  }
 }
