--- a/styles/style.css
+++ b/styles/style.css
@@ -342,6 +342,15 @@ img {
   font-family: "Playfair Display", serif;
   padding: 10px 15px;
   text-transform: uppercase;
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
+}
+.button:hover {
+  background-color: #2c2c2c;
+  color: #fafafa;
+  padding: 10px 20px;
+  -webkit-box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+          box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
 .nav {
@@ -403,6 +412,13 @@ img {
 .mobileNav li {
   text-align: center;
   margin-bottom: 20px;
+}
+.mobileNav a {
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
+}
+.mobileNav a:hover {
+  color: #7e7c7c;
 }
 .mobileNav .social {
   display: -webkit-box;
