updated nav styling, fixed some responsive behaviour

--- a/styles/sass/partials/_form.scss
+++ b/styles/sass/partials/_form.scss
@@ -51,7 +51,7 @@
     &:focus,
     &:active {
       outline: none;
-      border: 2px solid $primary;
+      border-color: $primary;
     }
   }
 }
