--- a/styles/style.css
+++ b/styles/style.css
@@ -330,6 +330,9 @@ img {
   color: #000;
   z-index: 10;
 }
+.skip-link:focus {
+  left: 0;
+}
 
 .wrapper {
   max-width: 1280px;
@@ -392,15 +395,26 @@ img {
 .nav a:hover::after {
   width: 100%;
 }
+.nav a:active::after {
+  width: 100%;
+}
 
 .mobileNav {
   background-color: #2c2c2c;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   position: fixed;
-  top: 0;
-  left: -450px;
+  top: -100%;
+  left: 0;
   height: 100vh;
   width: 100%;
-  max-width: 450px;
   color: #fafafa;
   font-family: "Playfair Display", serif;
   font-size: 1.5rem;
@@ -439,6 +453,7 @@ label {
   cursor: pointer;
   text-align: right;
   display: none;
+  z-index: 30;
 }
 
 input[type=checkbox] {
@@ -446,12 +461,31 @@ input[type=checkbox] {
   position: absolute;
 }
 input[type=checkbox]:checked ~ .mobileNav {
-  left: 0;
+  top: 0;
+}
+input[type=checkbox]:checked ~ label {
+  position: fixed;
+  top: 30px;
+  right: 30px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+input[type=checkbox]:checked ~ label i.fa-bars {
+  display: none;
+}
+input[type=checkbox]:checked ~ label i.fa-x {
+  opacity: 1;
 }
 
 i {
   font-size: 2.5rem;
+}
+i.fa-bars {
   color: #2c2c2c;
+}
+i.fa-x {
+  opacity: 0;
+  color: #fafafa;
 }
 
 .homeHeader {
@@ -631,7 +665,7 @@ i {
 }
 .form textarea:focus, .form textarea:active {
   outline: none;
-  border: 2px solid #fdfa69;
+  border-color: #fdfa69;
 }
 
 .about {
@@ -796,8 +830,7 @@ i {
   margin-left: 80px;
 }
 .profile p {
-  margin-bottom: 50px;
-  margin-right: 20px;
+  margin: 0 20px 50px 0;
 }
 
 .gallery {
@@ -814,14 +847,20 @@ i {
 .gallery .imgContainer {
   width: calc(33.3333333333% - 30px);
   cursor: pointer;
-  -webkit-transition: -webkit-transform 0.25s;
-  transition: -webkit-transform 0.25s;
-  transition: transform 0.25s;
-  transition: transform 0.25s, -webkit-transform 0.25s;
+  -webkit-transition: 0.25s;
+  transition: 0.25s;
+  overflow: hidden;
 }
-.gallery .imgContainer:hover {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+.gallery .imgContainer img {
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: -webkit-transform 0.5s;
+  transition: transform 0.5s;
+  transition: transform 0.5s, -webkit-transform 0.5s;
+}
+.gallery .imgContainer img:hover {
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+  opacity: 0.9;
 }
 
 .footer {
@@ -1232,6 +1271,25 @@ i {
     text-align: center;
   }
 
+  .info .infoContainer {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .info .iconContainer {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin: 0 0 25px 0;
+  }
+  .info .textContainer {
+    text-align: center;
+  }
+
   .profile .bannerContainer {
     height: 300px;
   }
@@ -1265,26 +1323,45 @@ i {
     width: auto;
   }
 
+  .blogHeader {
+    height: 70vh;
+  }
   .blogHeader h1 {
     margin-bottom: 100px;
     font-size: 3rem;
+    text-align: center;
+    width: 100%;
+  }
+
+  .posts {
+    margin-top: -260px;
   }
 
   .postContainer {
     text-align: center;
   }
 
+  .profileImg {
+    min-width: 50px;
+    margin-right: 20px;
+  }
+
+  .contactHeader {
+    height: 400px;
+  }
   .contactHeader .headingContainer {
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
   }
-
   .contactHeader h1 {
     font-size: 2.5rem;
     margin-top: 100px;
   }
 
+  .contactForm {
+    margin-top: -220px;
+  }
   .contactForm .form {
     padding-top: 80px;
   }
@@ -1304,9 +1381,6 @@ i {
     border-left: 30px solid #fdfa69;
   }
 
-  .mobileNav {
-    max-width: 80%;
-  }
   .mobileNav .social {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -1329,6 +1403,11 @@ i {
   }
   .blog .row .btnContainer {
     text-align: center;
+  }
+
+  .postContainer,
+.commentsContainer {
+    padding-left: 30px;
   }
 
   .gallery .wrapper {
