--- a/styles/style.css
+++ b/styles/style.css
@@ -829,6 +829,9 @@ i.fa-x {
   width: 66%;
   margin-left: 80px;
 }
+.profile h2 {
+  margin-bottom: 20px;
+}
 .profile p {
   margin: 0 20px 50px 0;
 }
