--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -172,15 +172,14 @@ $breakpointExtraSmall: 520px;
     flex-direction: column-reverse;
     align-items: center;
     padding-bottom: 100px;
+  }
+  .contactForm {
+    width: 100%;
+    box-shadow: none;
+    margin-bottom: 150px;
 
-    .contactForm {
-      width: 100%;
-      box-shadow: none;
-      margin-bottom: 150px;
-
-      .form {
-        box-shadow: 0px 15px 0px 5px $primary;
-      }
+    .form {
+      box-shadow: 0px 15px 0px 5px $primary;
     }
   }
 
@@ -201,7 +200,7 @@ $breakpointExtraSmall: 520px;
   }
 
   h3 {
-    font-size: 1.4;
+    font-size: 1.4rem;
   }
 
   .form {
@@ -342,6 +341,11 @@ $breakpointExtraSmall: 520px;
 }
 
 @media (max-width: $breakpointExtraSmall) {
+  //Base Styles
+  h2 {
+    font-size: 1.6rem;
+  }
+
   .homeHeader {
     height: 60vh;
     h1 {
@@ -406,12 +410,19 @@ $breakpointExtraSmall: 520px;
     }
   }
 
-  //Blog > Sidebar
-  .sidebar .imgContainer {
-    max-width: none;
+  //Blog
+  .blogMain {
+    padding-bottom: 50px;
   }
 
-  .sidebar .sidebarContainer {
+  .sidebar {
+    margin-top: 80px;
+    .imgContainer {
+      max-width: none;
+    }
+  }
+
+  .sidebarContainer {
     width: 100%;
     max-width: none;
   }
@@ -419,9 +430,17 @@ $breakpointExtraSmall: 520px;
   //Contact Header
   .contactHeader h1 {
     font-size: 2rem;
+    text-align: center;
   }
 
-  .contactForm .form {
-    padding-top: 50px;
+  .contactForm {
+    margin-bottom: 100px;
+    .form {
+      padding: 30px 15px;
+    }
+  }
+
+  .contactMain .wrapper {
+    width: 98%;
   }
 }
