--- a/styles/sass/partials/_nav.scss
+++ b/styles/sass/partials/_nav.scss
@@ -47,7 +47,7 @@
   position: fixed;
   top: -100%;
   left: 0;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   // max-width: 450px;
   color: $white;
