--- a/styles/style.css
+++ b/styles/style.css
@@ -413,7 +413,7 @@ img {
   position: fixed;
   top: -100%;
   left: 0;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   color: #fafafa;
   font-family: "Playfair Display", serif;
