minor fix to nav

--- a/styles/style.css
+++ b/styles/style.css
@@ -363,6 +363,7 @@ img {
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
+  z-index: 20;
 }
 .nav ul {
   display: -webkit-box;
