fixed minor selector issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -1444,8 +1444,7 @@ i.fa-x {
   .sidebar .imgContainer {
     max-width: none;
   }
-
-  .sidebarContainer {
+  .sidebar .sidebarContainer {
     width: 100%;
     max-width: none;
   }
